--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "urlshortener",
+  "name": "tasksReminder",
   "version": "1.0.0",
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
