--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "liveChat",
+  "name": "livechat",
   "version": "1.0.0",
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "deploy": "sls deploy"
   },
   "engines": {
     "node": ">=14.15.0"
